Android milestone: world renders, textures missing
* Initial plan

* Android port: assets, libGDX screens, CompactMesh/Camera/ResourceUtils fixes

Part 1: Create android/assets/shaders and builtin directories with
GLSL ES 3.0 shaders for chunk, sky, entity, and solid rendering.

Part 2: Replace CompactMesh with libGDX GL20/GL30 implementation.
Remove VAO/LWJGL; use IntBuffer-based glGenBuffers/glDeleteBuffers,
glVertexAttribIPointer per draw call, and Integer.BYTES for clarity.

Part 3: Remove java.awt.*, LWJGL GLFW/MemoryUtil imports from Camera.
Stub hideMouse/showMouse as no-ops. Strip AWT mouse input from update().
Add applyPanTiltDelta() for touch-based camera control.

Part 4: Null-check LOCALAPPDATA in ResourceUtils.initialize() to
avoid NullPointerException on Android/Linux.

Part 5: Enable GL30 in AndroidLauncher (useGL30 = true).

Part 6: Rewrite TesseraApp as Game subclass; add MainMenuScreen,
LoadingScreen, GameScreen, WorldRenderer, TouchControls, GameHUD.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Address code review: fix crosshair resize, Settings listener, remove unused Camera fields

- GameHUD: crosshair now uses fill-parent Table so it re-centers on resize
- MainMenuScreen: Settings button wired to showSettingsDialog() placeholder
- TouchControls: constructor comment clarifies camera param intent
- Camera: removed unused mouseX/mouseY fields

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* Port texture loading and game init to libGDX for Android compatibility

- TextureRequest: add 'path' field and gdxRequest() static factory methods
  that create requests without loading an LWJGL ByteBuffer, enabling use
  on Android where LWJGL is unavailable.

- TextureUtils: add makeTextureArrayGdx(), loadTextureFromResourceGdx(),
  streamToPixmap(), and loadPixmapFromRequest() using Gdx.gl30/Pixmap
  instead of LWJGL STBImage. Use direct ByteBuffers for GL interop.
  Fix GL30.glTexSubImage3D / GL30.glGenera