@@ -1,6 +1,8 @@
 package com.tessera.engine.utils.resource;
 
 import com.tessera.Main;
+import com.badlogic.gdx.Gdx;
+import com.badlogic.gdx.files.FileHandle;
 import com.tessera.window.utils.preformance.Stopwatch;
 
 import java.io.File;
@@ -12,6 +14,7 @@ import java.util.jar.JarFile;
 import java.util.regex.Pattern;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipException;
+import java.util.stream.Collectors;
 import java.util.zip.ZipFile;
 
 import static com.tessera.engine.utils.resource.ResourceLoader.FILE_SEPARATOR;
@@ -70,14 +73,21 @@ public class ResourceLister {
 
         //The easiest way to test if we are running inside of a jarfile, is if the results of this are empty
         Pattern pattern = Pattern.compile(compileInitRegex(true, INIT_RESOURCE_DIRECTORIES));
-        List<String> list = ResourceLister._listAllJarfileResources(pattern).stream().toList();
+        List<String> list = ResourceLister._listAllJarfileResources(pattern).stream().collect(Collectors.toList());
         System.out.println("List size: " + list.size());
         boolean isRunningAsJar = list.isEmpty();
 
-        //If we are runing as a jar file, try again
+        //If we are running as a jar file, try again
         if (isRunningAsJar) {
             pattern = Pattern.compile(compileInitRegex(false, INIT_RESOURCE_DIRECTORIES));
-            list = ResourceLister._listAllJarfileResources(pattern).stream().toList();
+            list = ResourceLister._listAllJarfileResources(pattern).stream().collect(Collectors.toList());
+        }
+
+        // Fallback for Android: classpath zip-scanning yields nothing, so use Gdx.files
+        if (list.isEmpty() && Gdx.files != null) {
+            for (String dir : INIT_RESOURCE_DIRECTORIES) {
+                collectGdxFiles(dir, list);
+            }
         }
 
         //Add all elements from the list to a string array
@@ -160,7 +170,27 @@ public class ResourceLister {
     }
 
     /**
-     * for all elements of java.class.path get a Collection of resources Pattern
+     * Recursively collects resource paths under {@code dirPath} using
+     * {@link Gdx#files} (Android AssetManager on Android, filesystem on desktop).
+     * Paths are added with a leading {@code /} via {@link ResourceLoader#formatPath}.
+     */
+    private static void collectGdxFiles(String dirPath, List<String> list) {
+        try {
+            FileHandle[] children = Gdx.files.internal(dirPath).list();
+            for (FileHandle child : children) {
+                String childPath = dirPath + FILE_SEPARATOR + child.name();
+                if (child.isDirectory()) {
+                    collectGdxFiles(childPath, list);
+                } else {
+                    list.add(ResourceLoader.formatPath(childPath));
+                }
+            }
+        } catch (Exception e) {
+            System.err.println("ResourceLister: GDX fallback failed for '" + dirPath + "': " + e.getMessage());
+        }
+    }
+
+    /**
      * pattern = Pattern.compile(".*"); gets all resources
      *
      * @param pattern the pattern to match
@@ -223,9 +253,9 @@ public class ResourceLister {
         try {
             zf = new ZipFile(file);
         } catch (final ZipException e) {
-            throw new Error(e);
+            return retval;
         } catch (final IOException e) {
-            throw new Error(e);
+            return retval;
         }
         final Enumeration e = zf.entries();
         while (e.hasMoreElements()) {
@@ -239,7 +269,7 @@ public class ResourceLister {
         try {
             zf.close();
         } catch (final IOException e1) {
-            throw new Error(e1);
+            System.err.println("ResourceLister: error closing ZipFile " + file + ": " + e1.getMessage());
         }
         return retval;
     }
@@ -247,6 +277,7 @@ public class ResourceLister {
     private static Collection<String> _getResourcesFromDirectory(final File directory, final Pattern pattern) {
         final ArrayList<String> retval = new ArrayList<String>();
         final File[] fileList = directory.listFiles();
+        if (fileList == null) return retval;
         for (final File file : fileList) {
             if (file.isDirectory()) {
                 retval.addAll(_getResourcesFromDirectory(file, pattern));
@@ -259,7 +290,8 @@ public class ResourceLister {
                         retval.add(fileName);
                     }
                 } catch (final IOException e) {
-                    throw new Error(e);
+                    // skip unreadable files (e.g. on Android) and continue scanning
+                    System.err.println("ResourceLister: skipping unreadable file " + file + ": " + e.getMessage());
                 }
             }
         }
